RDT3 - Fixed search break on small screen

--- a/src/css/hdruk.css
+++ b/src/css/hdruk.css
@@ -307,7 +307,7 @@ body {
 
 #SearchInputSpanGrey{
   display: inline-block;
-  width: 80%;
+  width: 70%;
   outline: none;
   border: 0;
   font-size: 16px;
